chore(container): adding a third party container

--- a/framework/composer.json
+++ b/framework/composer.json
@@ -26,6 +26,7 @@
     },
     "require": {
         "nikic/fast-route": "2.0.x-dev",
-        "psr/container": "^2.0@dev"
+        "psr/container": "^2.0@dev",
+        "league/container": "4.x-dev"
     }
 }
