--- a/framework/composer.json
+++ b/framework/composer.json
@@ -28,6 +28,7 @@
         "nikic/fast-route": "2.0.x-dev",
         "psr/container": "^2.0@dev",
         "league/container": "4.x-dev",
-        "symfony/dotenv": "6.3.x-dev"
+        "symfony/dotenv": "6.3.x-dev",
+        "twig/twig": "^3.0"
     }
 }
